<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">WDUWG Owner Tiles</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_google_api">GoogleApiActivity</string>
    <string name="title_activity_add_event_and_gateway">Business</string>
    <string name="google_places_search_loading_text">Please wait for a while\n We are locating businesses near your location</string>
    <string name="title_activity_search_by_place">Search</string>
    <string name="spinner_type">Event Type</string>
    <string name="spinner_recurs">Select Recurs</string>
    <string name="title_activity_add_event">What do you want to count?</string>
    <string name="title_activity_list_event">Events</string>
    <string name="title_activity_count">Total Count :</string>
    <string name="title_activity_identifying_business">Select Your Venue</string>
    <string name="title_activity_events">Add an Event</string>
    <string name="title_activity_reports">Reports</string>
    <string name="continueText"><u><b>Continue</b></u></string>
    <string name="delete"><u><b>Delete</b></u></string>
    <string name="delink"><u><b>Delink Device</b></u></string>
    <string name="delink2"><u><b>Delink\nDevice</b></u></string>
    <string name="skip"><u><b>Skip</b></u></string>
    <string name="link"><u>Link Device</u></string>
    <string name="skip_header">These businesses are close to your location.\n\nPlease click on any business to select \n or \n click <u><b>Skip</b></u> to Search For your business.</string>
    <string name="splash_message">Please wait while we determine if the device is already registered</string>
    <string name="selectList">\n<b>Select From List Below</b> </string>
    <string name="search"><b><u>Search</u></b></string>
    <string name="addBusiness"><b><u>Add Your Venue Details</u></b>\n</string>
    <string name="zero">0</string>
    <string name="facebook_app_id">743382039036135</string>
    <string name="logout"><u><b>Logout</b></u></string>
  <string name="button_cancel">Cancel</string>
  <string name="button_ok">OK</string>
  <string name="button_open_mobi">Decoder</string>
  <string name="button_open_license">Code License</string>
  <string name="menu_about">About</string>
  <string name="mobi_url">http://www.manateeworks.com</string>
  <string name="msg_default_contents">Contents</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder to scan it</string>
  <string name="msg_about">Decoder based on mobiScans Native Barcode Decoders for Android. To purchase a decoder SDK for application integration, or to have us develop your app, visit www.manateeworks.com.\n</string>
  <string name="msg_buggy">This device has known bugs that cause barcode scanning problems</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_type"></string>
  <string name="title_about">Camera Demo</string>
  <string name="license_url">http://www.apache.org/licenses/LICENSE-2.0</string>
  <string name="choose_Frequency">choose Frequency</string>
  
  <string name="facebook">Manage Facebook Alerts</string>
  <!-- <string name="scanner">Manage Scanner Validation Rules</string> -->
  <string name="notification">Manage Alerts Based On Count Thresholds</string>
  <string name="business">Manage Business Registeration</string>
  
  <string name="minage">Legal Age</string>
  <string name="autoupdatefacebook">Publish Counts</string>
  <string name="update_frequency">Publish Format?</string>
  <string name="message_notification">Send Count Alerts</string>
  <string name="notification_frequency">How Often?</string>
  <string name="generate_graph"><b><u>Generate Graph</u></b></string>
  <string name="phone_number">Where? </string>
  <string name="page_prompt">Select Facebook Page</string>  
  <string name="add_business"><b><u>Add Business</u></b></string>
  <string name="allEvents"><b><u>All Events</u> \u0020 \u0020></b></string>
  <string name="allSpecials"><b><u>All Specials</u> \u0020 \u0020></b></string>
  <string name="view"><b><u>View</u> \u0020 \u0020></b></string>
  <string name="messageForUser">The following businesses are listed under your login. Please select a business to continue.</string>
    
    
    <style name="ButtonText">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3sp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">5</item>
        <item name="android:paddingLeft">15sp</item>
        <item name="android:paddingRight">15sp</item>
    </style>
    
    


</resources>
