<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GoogleApiActivity"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
    >

    <LinearLayout
        android:id="@+id/loading_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/rotate_logo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/wduwg_logo2223" />

        <TextView
            android:id="@+id/loading_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="top|center_horizontal"
            android:text="@string/google_places_search_loading_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0669B1"
            android:textSize="16sp" /> <!--  android:fontFamily="sans-serif-light" -->
    </LinearLayout>

    <!-- linear layout and listview -->

    <LinearLayout
        android:id="@+id/skip_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/header1TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/selectList"
            android:textColor="#0669b1"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/or1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:text="or"
                android:textColor="#0669b1" />

            <TextView
                android:id="@+id/header2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="onSearch"
                android:text="@string/search"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/or2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:text="or"
                android:textColor="#0669b1" />

            <TextView
                android:id="@+id/header3TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="onAddBusinessWithVenue"
                android:text="@string/addBusiness"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <!-- remove next LL -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5sp"
            android:background="#0669b1" >
        </LinearLayout>
    </LinearLayout>

    <GridView android:id="@+id/gridview"
              android:layout_below="@+id/skip_layout"
              android:numColumns="2"
    android:gravity="center"
    android:verticalSpacing="12dp"
    android:horizontalSpacing="12dp"
    android:columnWidth="100dp"
    android:stretchMode="columnWidth"
    android:layout_width="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp" 
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginTop="12dp"
    android:layout_height="match_parent">
        
    </GridView>

</RelativeLayout>
